Added projects to resume
cards below each job

--- a/resume.html
+++ b/resume.html
@@ -41,12 +41,25 @@
       <h3>2016 Fellow</h3>
       <h4>Code for America</h4>
       <p>I am working on a team of three with the City of New Orleans on workforce development projects. We’re building digital tools that assist employers in finding better-matched candidates, and prepare and connect job seekers to careers.</p>
-        <ul>
-          <li>UX researcher, designer and co-front-end developer,</li>
-          <li>Researching workforce system and unemployment benefits,</li>
-          <li>Designing print material and web-based interfaces, and</li>
-          <li>Working directly with city officials to improve job seeker engagement with the workforce system.</li>
-        </ul>
+      <ul>
+        <li>UX researcher, designer and co-front-end developer,</li>
+        <li>Researching workforce system and unemployment benefits,</li>
+        <li>Designing print material and web-based interfaces, and</li>
+        <li>Working directly with city officials to improve job seeker engagement with the workforce system.</li>
+      </ul>
+      <a href="work-forward-nola.html" title="Learn more about Work Forward NOLA">
+        <div class="project">
+          <h4>Work Forward NOLA</h4>
+          <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
+        </div>
+      </a>
+      <a href="posting-pro.html" title="Learn more about Work Forward NOLA">
+        <div class="project">
+          <h4>Posting Pro</h4>
+          <p>A tool to help employers create inclusive, skills-based job postings that are free of implicit bias.</p>
+        </div>
+      </a>
+      <div class="clearfix"></div>
     </div>
 
     <div id="vis">
@@ -77,6 +90,25 @@
         <li>Created a universal web request system, and
         <li>Developed an online dynamic employee organizational chart with contact information.</li>
       </ul>
+      <a href="employee-intranet.html" title="Learn more about the Employee Intranet">
+        <div class="project">
+          <h4>Employee Intranet</h4>
+          <p>A re-design of the employee intranet to improve content and accessibility of information.</p>
+        </div>
+      </a>
+      <a href="web-request-system.html" title="Learn more about the Web Request System">
+        <div class="project">
+          <h4>Web Request System</h4>
+          <p>Re-designed a request system used internally to track communication about web updates.</p>
+        </div>
+      </a>
+      <a href="spr-posters.html" title="Learn more about the Stream Protection Rule Posters">
+        <div class="project">
+          <h4>Stream Protection Rule Posters</h4>
+          <p>A series of posters to be used at a series of meetings informing and collecting comments from the public.</p>
+        </div>
+      </a>
+      <div class="clearfix"></div>
     </div>
 
     <div id="intern">
@@ -84,10 +116,17 @@
       <h3>Web Design Intern</h3>
       <h4>AmeriCorps/Office of Surface Mining Reclamation and Enforcement</h4>
       <p>I worked at the Office of Surface Mining Reclamation and Enforcement to assist with web and graphic development. Worked with the web team to begin redesign of national and regional websites.</p>
-        <ul>
-          <li>Created print, web and media documents in support of public outreach and internal affairs</li>
-          <li>Supported online training by helping to develop, edit and produce videos</li>
-        </ul>
+      <ul>
+        <li>Created print, web and media documents in support of public outreach and internal affairs</li>
+        <li>Supported online training by helping to develop, edit and produce videos</li>
+      </ul>
+      <a href="osmre-website.html" title="Learn more about the OSMRE website">
+        <div class="project">
+          <h4>www.osmre.gov</h4>
+          <p>Re-design of the regional and national public-facing websites to improve navigation and develop consistent branding.</p>
+        </div>
+      </a>
+      <div class="clearfix"></div>
     </div>
   </section>
   <footer>
