--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,9 @@
   <div class="hexBG"></div>
   <img id="hex-image" src="assets/images/portfolio-icon.png" alt="Blue abstract icon"/>
   <section id="project-container">
+    <div class="button-wrapper">
+      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button basic-button-outline center">See recent projects</a>
+    </div>
     <h2>Online Portfolio Process</h2>
     <a class="projectLink" href="https://skcain.github.io/index.html" title="Personal Portfolio" target="_blank">https://skcain.github.io/index.html</a>
 
