--- a/posting-pro.html
+++ b/posting-pro.html
@@ -32,6 +32,9 @@
   <div class="hexBG"></div>
   <img id="hex-image" src="assets/images/cfa-logo.png" alt="Code for America logo"/>
   <section id="project-container">
+    <div class="button-wrapper">
+      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button basic-button-outline center">See recent projects</a>
+    </div>
     <h2>Posting Pro</h2>
     <a class="projectLink" href="https://posting-pro.herokuapp.com/" title="Posting Pro" target="_blank">https://posting-pro.herokuapp.com/</a>
 
