--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -32,6 +32,9 @@
   <div class="hexBG"></div>
   <img id="hex-image" src="assets/images/cfa-logo.png" alt="Code for America logo"/>
   <section id="project-container">
+    <div class="button-wrapper">
+      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button basic-button-outline center">See recent projects</a>
+    </div>
     <h2>Work Forward NOLA</h2>
     <a class="projectLink" href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a>
 
