Changed card sizing
Added another card to index.html

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Contact Information Stephanie Cain</title>
+  <title>Stephanie Cain's Online Portfolio</title>
   <meta name="description" content="Contact Information Stephanie Cain">
   <meta name="author" content="Stephanie Cain">
 
