--- a/posting-pro.html
+++ b/posting-pro.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Posting Pro</title>
+  <title>Stephanie Cain's Online Portfolio</title>
   <meta name="description" content="Project: Posting Pro">
   <meta name="author" content="Stephanie Cain">
 
