--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Stephanie Cain's Online Portfolio</title>
-  <meta name="description" content="Project: OSMRE Website">
+  <meta name="description" content="Full Project List">
   <meta name="author" content="Stephanie Cain">
 
   <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
 
-<body id="secondary">
+<body id="secondary" class="projects">
   <div class="centered-navigation" role="banner">
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
@@ -29,19 +29,58 @@
       <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
     </div>
   </div>
-  <div class="hexBG"></div>
-  <img id="hex-image" src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/>
-  <section id="project-container">
-    <h2>OSMRE Website</h2>
-    <p>This project is under construction.</p>
-    <!--<h3>Problem</h3>
-    <p></p>
+  <section>
+    <h2>Full Project List</h2>
 
-    <h3>Solution</h3>
-    <p></p>
-
-    <h3>Process</h3>
-    <p></p>-->
+    <a href="employee-intranet.html" title="Employee Intranet">
+      <div class="project">
+        <h3>Employee Intranet</h3>
+        <p>Office of Surface Mining Reclamation and Enforcement</p>
+        <p>A re-design of the employee intranet to improve content and accessibility of information.</p>
+      </div>
+    </a>
+    <a href="osmre-website.html" title="OSMRE Website">
+      <div class="project">
+        <h3>OSMRE Website</h3>
+        <p>Office of Surface Mining Reclamation and Enforcement</p>
+        <p>Re-design of the regional and national public-facing websites to improve navigation and develop consistent branding.</p>
+      </div>
+    </a>
+    <a href="portfolio.html" title="Portfolio">
+      <div class="project">
+        <h3>Portfolio</h3>
+        <p>A mobile-first website that describes the process of my recent work.</p>
+      </div>
+    </a>
+    <a href="posting-pro.html" title="Posting Pro">
+      <div class="project">
+        <h3>Posting Pro</h3>
+        <p>Code for America</p>
+        <p>A tool to help employers create inclusive, skills-based job postings that are free of implicit bias.</p>
+      </div>
+    </a>
+    <a href="spr-posters.html" title="SPR Posters">
+      <div class="project">
+        <h3>SPR Posters</h3>
+        <p>Office of Surface Mining Reclamation and Enforcement</p>
+        <p>A series of posters to be used at a series of meetings informing and collecting comments from the public.</p>
+      </div>
+    </a>
+    <a href="web-request-system.html" title="Web Request System">
+      <div class="project">
+        <h3>Web Request System</h3>
+        <p>Office of Surface Mining Reclamation and Enforcement</p>
+        <p>Re-designed a request system used internally to track communication about web updates.</p>
+      </div>
+    </a>
+    <a href="work-forward-nola.html" title="Work Forward NOLA">
+      <div class="project">
+        <h3>Work Forward NOLA</h3>
+        <p>Code for America</p>
+        <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
+      </div>
+    </a>
+    <div class="clearfix"></div>
   </section>
   <footer>
     <div class="social-media">
