--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Stephanie Cain's Resume</title>
+  <title>Stephanie Cain's Online Portfolio</title>
   <meta name="description" content="Resume">
   <meta name="author" content="Stephanie Cain">
 
