--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Work Forward NOLA</title>
+  <title>Stephanie Cain's Online Portfolio</title>
   <meta name="description" content="Project: Work Forward NOLA">
   <meta name="author" content="Stephanie Cain">
 
