--- a/employee-intranet.html
+++ b/employee-intranet.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Employee Intranet</title>
+  <title>Stephanie Cain's Online Portfolio</title>
   <meta name="description" content="Project: Employee Intranet">
   <meta name="author" content="Stephanie Cain">
 
