--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </div>
     <p>My experience in the public sector has equipped me with expertise in government design, user engagement and workforce. I enjoy building relationships with people and creating growth opportunties for under-served communities.</p>
   </header>
-  <section id="recentProjects">
-    <h2>Recent Projects</h2>
+  <section id="featuredProjects">
+    <h2>Featured Projects</h2>
 
     <a href="work-forward-nola.html" title="Learn more about Work Forward NOLA">
       <div class="project" id="workforwardNOLA">
@@ -66,11 +66,19 @@
       </div>
     </a>
 
-    <a href="portfolio.html" title="Learn more about my process creating an online portfolio">
+    <a class="marginChange" href="portfolio.html" title="Learn more about my process creating an online portfolio">
       <div class="project" id="personalPortfolio">
         <div class="logoWrap"><img src="assets/images/portfolio-icon.png" title="Personal Portfolio Icon" alt="Personal Portfolio Icon"/></div>
         <h3>Personal Portfolio</h3>
         <p>A mobile-first website that describes the process of my recent work.</p>
+      </div>
+    </a>
+
+    <a class="marginChange" href="web-request-system.html" title="Learn more about my process creating a web request system">
+      <div class="project" id="osmre-wrs">
+        <div class="logoWrap"><img src="assets/images/osmre-logo.png" title="Office of Surface Mining Reclamation and Enforcement Logo" alt="Office of Surface Mining Reclamation and Enforcement Logo"/></div>
+        <h3>Web Request System</h3>
+        <p>Re-design of the regional and national public-facing websites to improve navigation and develop consistent branding.</p>
       </div>
     </a>
     <div class="clearfix"></div>
