--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Stephanie Cain's Online Portfolio Process</title>
+  <title>Stephanie Cain's Online Portfolio</title>
   <meta name="description" content="Project: Online Portfolio">
   <meta name="author" content="Stephanie Cain">
 
