--- a/spr-posters.html
+++ b/spr-posters.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Stream Protection Rule Posters</title>
+  <title>Stephanie Cain's Online Portfolio</title>
   <meta name="description" content="Project: Stream Protection Rule Posters">
   <meta name="author" content="Stephanie Cain">
 
