--- a/web-request-system.html
+++ b/web-request-system.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Web Request System</title>
+  <title>Stephanie Cain's Online Portfolio</title>
   <meta name="description" content="Project: Web Request System">
   <meta name="author" content="Stephanie Cain">
 
