--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="project" id="osmre-wrs">
         <div class="logoWrap"><img src="assets/images/osmre-logo.png" title="Office of Surface Mining Reclamation and Enforcement Logo" alt="Office of Surface Mining Reclamation and Enforcement Logo"/></div>
         <h3>Web Request System</h3>
-        <p>Re-design of the regional and national public-facing websites to improve navigation and develop consistent branding.</p>
+        <p>Re-design of the regional and national websites to improve navigation and develop branding.</p>
       </div>
     </a>
     <div class="clearfix"></div>
