--- a/resume.html
+++ b/resume.html
@@ -42,8 +42,8 @@
       <h4>Code for America</h4>
       <p>I am working on a team of three with the City of New Orleans on workforce development projects. We’re building digital tools that assist employers in finding better-matched candidates, and prepare and connect job seekers to careers.</p>
       <ul>
-        <li>UX researcher, designer and co-front-end developer,</li>
-        <li>Researching workforce system and unemployment benefits,</li>
+        <li>UX researcher, designer and front-end developer,</li>
+        <li>Researching local and federal workforce system,</li>
         <li>Designing print material and web-based interfaces, and</li>
         <li>Working directly with city officials to improve job seeker engagement with the workforce system.</li>
       </ul>
@@ -66,18 +66,19 @@
       <a href="http://www.osmre.gov" title="Office of Surface Mining Reclamation and Enforcement Website" target="_blank"><img src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/></a>
       <h3>Visual Information Specialist</h3>
       <h4>Office of Surface Mining Reclamation and Enforcement</h4>
-      <p>I participated in the Graphics, Web and Video Development teams to create internal and external-facing publications in support of the bureau’s mission. I also worked to redesign internal-facing systems to improve efficiency and better serve users.</p>
+      <p>I participated in the Graphics, Web and Video Development teams to create publications in support of the bureau’s mission. I also worked to redesign systems to improve efficiency and better serve users.</p>
+
       <p><strong>Web</strong></p>
       <ul>
-        <li>Two major website re-designs and basic maintenance of existing websites, and</li>
+        <li>Two website re-designs and basic website maintenance,</li>
+        <li>Conducted user research and usability tests, and</li>
         <li>Improved accessibility/508 compliance and SEO of existing websites.</li>
       </ul>
 
       <p><strong>Graphics</strong></p>
       <ul>
-        <li>Developed several large printed posters for public meetings,
-        <li>Contributed to design of two re-designed logos, and
-        <li>Developed printed marketing material for educational purposes.</li>
+        <li>Printed material for public outreach and meetings, and
+        <li>Re-designed two logos.
       </ul>
 
       <p><strong>Video Development</strong></p>
@@ -88,7 +89,7 @@
       <p><strong>System Design</strong></p>
       <ul>
         <li>Created a universal web request system, and
-        <li>Developed an online dynamic employee organizational chart with contact information.</li>
+        <li>Developed an online dynamic employee organizational chart.</li>
       </ul>
       <a href="employee-intranet.html" title="Learn more about the Employee Intranet">
         <div class="project">
@@ -117,13 +118,13 @@
       <h4>AmeriCorps/Office of Surface Mining Reclamation and Enforcement</h4>
       <p>I worked at the Office of Surface Mining Reclamation and Enforcement to assist with web and graphic development. Worked with the web team to begin redesign of national and regional websites.</p>
       <ul>
-        <li>Created print, web and media documents in support of public outreach and internal affairs</li>
+        <li>Created print, web and media documents in support of public outreach and internal affairs, and</li>
         <li>Supported online training by helping to develop, edit and produce videos</li>
       </ul>
       <a href="osmre-website.html" title="Learn more about the OSMRE website">
         <div class="project">
           <h4>www.osmre.gov</h4>
-          <p>Re-design of the regional and national public-facing websites to improve navigation and develop consistent branding.</p>
+          <p>Re-design of the regional and national websites to improve navigation and develop branding.</p>
         </div>
       </a>
       <div class="clearfix"></div>
