Added about page
Moved content around

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Stephanie Cain's Online Portfolio</title>
-  <meta name="description" content="Contact Information Stephanie Cain">
+  <meta name="description" content="About Stephanie Cain">
   <meta name="author" content="Stephanie Cain">
 
   <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
 
-<body id="secondary" class="contact">
+<body id="secondary" class="about">
   <div class="centered-navigation" role="banner">
     <div class="in-progress">This website is a work in progress. If you have comments, <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">please send me an email</a>.</div>
     <div class="centered-navigation-wrapper">
@@ -33,7 +33,25 @@
   <section id="project-container">
     <h2>Contact</h2>
     <p class="center">I am currently based in San Francisco, California.</p>
-    <p class="center">Interested in getting in touch? Send me an email <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">here</a>.</p>
+    <p class="center">Interested in getting in touch? <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">Send me an email</a>.</p>
+  </section>
+  <section id="process">
+    <h2>Process</h2>
+    <p>When I work on a project, I’m driven to continue learning throughout every stage of the process. I begin with independent research and competitive analysis to better understand the context around the problem.</p>
+    <p>Next, and most importantly, I listen to the people who already use or potentially will engage with the system. By building relationships, I can expand upon existing expertise and uncover perspectives that impact my own approach.</p>
+    <p>Communicating those learnings to my team helps us collaboratively brainstorm needs, assumptions and tests that lead to user-centered solutions.</p>
+  </section>
+  <section>
+    <h2>Interests</h2>
+    <ul>
+      <li>Boxing</li>
+      <li>Podcasts</li>
+      <li>Learning about sustainability in farming</li>
+      <li>Hiking (both urban and mountainous)</li>
+      <li>Reading (a couple favorites: 100 Years of Solitude by Gabriel Garcia Marquez and Mr. Penumbra’s 24 hour bookstore by Robin Sloan)</li>
+      <li>Creating (i.e. bookmaking, sewing, drawing, woodwork)</li>
+      <li>Playing chess</li>
+    </ul>
   </section>
   <footer>
     <div class="social-media">
