--- a/employee-intranet.html
+++ b/employee-intranet.html
@@ -34,7 +34,7 @@
   <img id="hex-image" src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/>
   <section id="project-container">
     <div class="button-wrapper">
-      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button basic-button-outline center">See recent projects</a>
+      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button center">See recent projects</a>
     </div>
     <h2>Employee Intranet</h2>
     <h3>Problem</h3>
