--- a/resume.html
+++ b/resume.html
@@ -16,25 +16,27 @@
 </head>
 
 <body id="secondary" class="resume">
-  <div class="in-progress">This website is a work in progress. If you have comments, <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">please send me an email</a>.</div>
-  <div class="centered-navigation-wrapper">
-    <nav role="navigation">
-      <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
-        <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
-        <li class="nav-link"><a href="about.html" title="About">About</a></li>
-        <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
-      </ul>
-    </nav>
+  <div class="centered-navigation" role="banner">
+    <div class="in-progress">This website is a work in progress. If you have comments, <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">please send me an email</a>.</div>
+    <div class="centered-navigation-wrapper">
+      <nav role="navigation">
+        <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
+          <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
+          <li class="nav-link"><a href="about.html" title="About">About</a></li>
+          <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
+        </ul>
+      </nav>
       <a href="javascript:void(0)" id="nav-open" class="centered-navigation-mobile-menu" onclick="menuToggle()">Open Menu</a>
       <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
     </div>
   </div>
   <section id="project-container">
-    <div class="button-wrapper">
-      <a href="resume.pdf" title="Download resume" target="_blank" class="basic-button basic-button-outline center">Download resume</a>
-    </div>
     <h2>Resume</h2>
     <p class="center">I have 10 years of professional experience and 4 years of industry experience.</p>
+
+    <div class="button-wrapper">
+      <a href="resume.pdf" title="Download resume" target="_blank" class="basic-button center">Download resume</a>
+    </div>
 
     <div id="fellow">
       <a href="http://www.codeforamerica.org" title="Code for America Website" target="_blank"><img src="assets/images/cfa-logo.png" alt="Code for America logo"/></a>
