--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </ul>
     </div>
     <p>My experience in the public sector has equipped me with expertise in government design, user engagement and workforce. I enjoy building relationships with people and creating growth opportunties for under-served communities.</p>
+    <p><a href="mailto:contact@scain.design" title="Email Stephanie Cain">Send me an email</a>.</p>
   </header>
   <section id="featuredProjects">
     <h2>Featured Projects</h2>
@@ -83,12 +84,6 @@
       </div>
     </a>
     <div class="clearfix"></div>
-  </section>
-  <section id="process">
-    <h2>Process</h2>
-    <p>When I work on a project, I’m driven to continue learning throughout every stage of the process. I begin with independent research and competitive analysis to better understand the context around the problem.</p>
-    <p>Next, and most importantly, I listen to the people who already use or potentially will engage with the system. By building relationships, I can expand upon existing expertise and uncover perspectives that impact my own approach.</p>
-    <p>Communicating those learnings to my team helps us collaboratively brainstorm needs, assumptions and tests that lead to user-centered solutions.</p>
   </section>
   <footer>
     <div class="social-media">
