--- a/osmre-website.html
+++ b/osmre-website.html
@@ -16,15 +16,16 @@
 </head>
 
 <body id="secondary">
-  <div class="in-progress">This website is a work in progress. If you have comments, <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">please send me an email</a>.</div>
-  <div class="centered-navigation-wrapper">
-    <nav role="navigation">
-      <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
-        <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
-        <li class="nav-link"><a href="about.html" title="About">About</a></li>
-        <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
-      </ul>
-    </nav>
+  <div class="centered-navigation" role="banner">
+    <div class="in-progress">This website is a work in progress. If you have comments, <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">please send me an email</a>.</div>
+    <div class="centered-navigation-wrapper">
+      <nav role="navigation">
+        <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
+          <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
+          <li class="nav-link"><a href="about.html" title="About">About</a></li>
+          <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
+        </ul>
+      </nav>
       <a href="javascript:void(0)" id="nav-open" class="centered-navigation-mobile-menu" onclick="menuToggle()">Open Menu</a>
       <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
     </div>
@@ -32,6 +33,9 @@
   <div class="hexBG"></div>
   <img id="hex-image" src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/>
   <section id="project-container">
+    <div class="button-wrapper">
+      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button center">See recent projects</a>
+    </div>
     <h2>OSMRE Website</h2>
     <p>This project is under construction.</p>
     <!--<h3>Problem</h3>
@@ -42,7 +46,7 @@
 
     <h3>Process</h3>
     <p></p>-->
-  </section>  
+  </section>
   <footer>
     <div class="social-media">
       <ul>
