--- a/projects.html
+++ b/projects.html
@@ -16,15 +16,15 @@
 </head>
 
 <body id="secondary" class="projects">
-  <div class="in-progress">This website is a work in progress. If you have comments, <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">please send me an email</a>.</div>
-  <div class="centered-navigation-wrapper">
-    <nav role="navigation">
-      <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
-        <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
-        <li class="nav-link"><a href="about.html" title="About">About</a></li>
-        <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
-      </ul>
-    </nav>
+  <div class="centered-navigation" role="banner">
+    <div class="in-progress">This website is a work in progress. If you have comments, <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">please send me an email</a>.</div>
+    <div class="centered-navigation-wrapper">
+      <nav role="navigation">
+        <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
+          <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
+          <li class="nav-link"><a href="about.html" title="About">About</a></li>
+          <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
+        </ul>
       </nav>
       <a href="javascript:void(0)" id="nav-open" class="centered-navigation-mobile-menu" onclick="menuToggle()">Open Menu</a>
       <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
