Fixed spelling, margin
Home page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </a></li>
       </ul>
     </div>
-    <p>My experience in the public sector has equipped me with expertise in government design, user engagement and workforce. I enjoy building relationships with people and creating growth opportunties for under-served communities.</p>
+    <p>My experience in the public sector has equipped me with expertise in government design, user engagement and workforce. I enjoy building relationships with people and creating growth opportunities for under-served communities.</p>
     <p><a href="mailto:contact@scain.design" title="Email Stephanie Cain">Send me an email</a>.</p>
   </header>
   <section id="featuredProjects">
