--- a/index.html
+++ b/index.html
@@ -51,39 +51,64 @@
   </header>
   <section id="featuredProjects">
     <h2>Featured Projects</h2>
-
-    <a href="work-forward-nola.html" title="Learn more about Work Forward NOLA">
-      <div class="project" id="workforwardNOLA">
-        <div class="logoWrap"><img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/></div>
-        <h3>Work Forward NOLA</h3>
-        <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
+    <div class="cards">
+      <a href="work-forward-nola.html" target="_blank" title="Work Forward NOLA">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/>
+          </div>
+          <div class="card-header">
+            <h3>Work Forward NOLA</h3>
+          </div>
+          <div class="card-copy">
+            <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
+          </div>
+        </a>
       </div>
-    </a>
 
-    <a href="posting-pro.html" title="Learn more about Posting Pro">
-      <div class="project" id="postingPro">
-        <div class="logoWrap"><img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/></div>
-        <h3>Posting Pro</h3>
-        <p>A job posting creation tool to help employers attract the right candidaties with inclusive, skills-based hiring.</p>
+      <div class="card">
+        <a href="posting-pro.html" target="_blank" title="Posting Pro">
+          <div class="card-image">
+            <img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/>
+          </div>
+          <div class="card-header">
+            <h3>Posting Pro</h3>
+          </div>
+          <div class="card-copy">
+            <p>A job posting creation tool to help employers attract the right candidaties with inclusive, skills-based hiring.</p>
+          </div>
+        </a>
       </div>
-    </a>
 
-    <a class="marginChange" href="portfolio.html" title="Learn more about my process creating an online portfolio">
-      <div class="project" id="personalPortfolio">
-        <div class="logoWrap"><img src="assets/images/portfolio-icon.png" title="Personal Portfolio Icon" alt="Personal Portfolio Icon"/></div>
-        <h3>Personal Portfolio</h3>
-        <p>A mobile-first website that describes the process of my recent work.</p>
+      <div class="card">
+        <a href="portfolio.html" target="_blank" title="Portfolio">
+          <div class="card-image">
+            <img class="square" src="assets/images/portfolio-icon.png" title="Personal Portfolio Icon" alt="Personal Portfolio Icon">
+          </div>
+          <div class="card-header">
+            <h3>Personal Portfolio</h3>
+          </div>
+          <div class="card-copy">
+            <p>A mobile-first website that describes the process of my recent work.</p>
+          </div>
+        </a>
       </div>
-    </a>
 
-    <a class="marginChange" href="web-request-system.html" title="Learn more about my process creating a web request system">
-      <div class="project" id="osmre-wrs">
-        <div class="logoWrap"><img src="assets/images/osmre-logo.png" title="Office of Surface Mining Reclamation and Enforcement Logo" alt="Office of Surface Mining Reclamation and Enforcement Logo"/></div>
-        <h3>Web Request System</h3>
-        <p>Re-design of the regional and national websites to improve navigation and develop branding.</p>
+
+      <div class="card">
+        <a href="web-request-system.html" target="_blank" title="Web Request System">
+          <div class="card-image">
+            <img class="square" src="assets/images/osmre-logo.png" title="Office of Surface Mining Reclamation and Enforcement Logo" alt="Office of Surface Mining Reclamation and Enforcement Logo">
+          </div>
+          <div class="card-header">
+            <h3>Web Request System</h3>
+          </div>
+          <div class="card-copy">
+            <p>Re-design of the regional and national websites to improve navigation and develop branding.</p>
+          </div>
+        </a>
       </div>
-    </a>
-    <div class="clearfix"></div>
+    </div>
   </section>
   <footer>
     <div class="social-media">
