cards on resume page
New style

--- a/resume.html
+++ b/resume.html
@@ -49,19 +49,30 @@
         <li>Designing print material and web-based interfaces, and</li>
         <li>Working directly with city officials to improve job seeker engagement with the workforce system.</li>
       </ul>
-      <a href="work-forward-nola.html" title="Learn more about Work Forward NOLA">
-        <div class="project">
-          <h4>Work Forward NOLA</h4>
-          <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
+
+      <div class="cards">
+        <a href="work-forward-nola.html" target="_blank" title="Work Forward NOLA">
+          <div class="card">
+            <div class="card-header">
+              <h3>Work Forward NOLA</h3>
+            </div>
+            <div class="card-copy">
+              <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
+            </div>
+          </a>
         </div>
-      </a>
-      <a href="posting-pro.html" title="Learn more about Work Forward NOLA">
-        <div class="project">
-          <h4>Posting Pro</h4>
-          <p>A tool to help employers create inclusive, skills-based job postings that are free of implicit bias.</p>
+
+        <div class="card">
+          <a href="posting-pro.html" target="_blank" title="Posting Pro">
+            <div class="card-header">
+              <h3>Posting Pro</h3>
+            </div>
+            <div class="card-copy">
+              <p>A job posting creation tool to help employers attract the right candidaties with inclusive, skills-based hiring.</p>
+            </div>
+          </a>
         </div>
-      </a>
-      <div class="clearfix"></div>
+      </div>
     </div>
 
     <div id="vis">
@@ -93,25 +104,40 @@
         <li>Created a universal web request system, and
         <li>Developed an online dynamic employee organizational chart.</li>
       </ul>
-      <a href="employee-intranet.html" title="Learn more about the Employee Intranet">
-        <div class="project">
-          <h4>Employee Intranet</h4>
-          <p>A re-design of the employee intranet to improve content and accessibility of information.</p>
+      <div class="cards">
+        <a href="employee-intranet.html" title="Learn more about the Employee Intranet">
+          <div class="card">
+            <div class="card-header">
+              <h3>Employee Intranet</h3>
+            </div>
+            <div class="card-copy">
+              <p>A re-design of the employee intranet to improve content and accessibility of information.</p>
+            </div>
+          </a>
         </div>
-      </a>
-      <a href="web-request-system.html" title="Learn more about the Web Request System">
-        <div class="project">
-          <h4>Web Request System</h4>
-          <p>Re-designed a request system used internally to track communication about web updates.</p>
+
+        <div class="card">
+          <a href="web-request-system.html" title="Learn more about the Web Request System">
+            <div class="card-header">
+              <h3>Web Request System</h3>
+            </div>
+            <div class="card-copy">
+              <p>Re-designed a request system used internally to track communication about web updates.</p>
+            </div>
+          </a>
         </div>
-      </a>
-      <a href="spr-posters.html" title="Learn more about the Stream Protection Rule Posters">
-        <div class="project">
-          <h4>Stream Protection Rule Posters</h4>
-          <p>A series of posters to be used at a series of meetings informing and collecting comments from the public.</p>
+
+        <div class="card">
+          <a href="spr-posters.html" title="Learn more about the Stream Protection Rule Posters">
+            <div class="card-header">
+              <h3>Stream Protection Rule Posters</h3>
+            </div>
+            <div class="card-copy">
+              <p>A series of posters to be used at a series of meetings informing and collecting comments from the public.</p>
+            </div>
+          </a>
         </div>
-      </a>
-      <div class="clearfix"></div>
+      </div>
     </div>
 
     <div id="intern">
@@ -123,13 +149,19 @@
         <li>Created print, web and media documents in support of public outreach and internal affairs, and</li>
         <li>Supported online training by helping to develop, edit and produce videos</li>
       </ul>
-      <a href="osmre-website.html" title="Learn more about the OSMRE website">
-        <div class="project">
-          <h4>www.osmre.gov</h4>
-          <p>Re-design of the regional and national websites to improve navigation and develop branding.</p>
+
+      <div class="cards">
+        <a href="osmre-website.html" title="Learn more about the OSMRE website">
+          <div class="card">
+            <div class="card-header">
+              <h3>www.osmre.gov</h3>
+            </div>
+            <div class="card-copy">
+              <p>Re-design of the regional and national websites to improve navigation and develop branding.</p>
+            </div>
+          </a>
         </div>
-      </a>
-      <div class="clearfix"></div>
+      </div>
     </div>
   </section>
   <footer>
