--- a/index.html
+++ b/index.html
@@ -30,10 +30,23 @@
       <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
     </div>
   </div>
-  <div class="hexBG"></div>
   <header>
-    <img id="hex-image" src="assets/images/scProfile.png" alt="Stephanie Cain's profile picture"/>
-    <h1>My name is Stephanie Cain.<br>I am a product designer and I<br> develop user focused civic technology.</h1>
+    <svg class="svg-graphic" width="100%" height="254" viewBox="0 0 220 254" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" version="1.1" style="margin-top: 4rem;">
+      <clipPath id="hexagonal-mask">
+        <polygon points="0 63.5 110 0 220 63.5 220 190.5 110 254 0 190.5 0 63.5"></polygon>
+      </clipPath>
+      <defs>
+        <style>
+          .polygon { fill:#c9d3d6; }
+        </style>
+        <polygon id="polygon" points="0 63.5 110 0 220 63.5 220 190.5 110 254 0 190.5 0 63.5"></polygon>
+      </defs>
+      <title>Stephanie Cain's Profile Picture and hexagon pattern</title>
+      <g id="hex-group">
+        <image clip-path="url(#hexagonal-mask)" height="254" width="254" x="-20" y="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/stephanie-cain.jpg"></image>
+      </g>
+    </svg>
+    <h1>My name is Stephanie Cain.<br>I am a product designer and I<br> develop user-focused civic technology.</h1>
     <div class="social-media">
       <ul>
         <li class="activeHex"><a href="https://www.linkedin.com/in/skcain" target="_blank" title="Stephanie Cain's LinkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
