--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic,300,300italic,400,400italic,600,600italic,700,700italic,900,900italic" rel="stylesheet">
   <link rel="stylesheet" href="assets/style/css/main.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body id="primary">
@@ -33,7 +35,7 @@
   <div class="hexBG"></div>
   <header>
     <img id="hex-image" src="assets/images/scProfile.png" alt="Stephanie Cain's profile picture"/>
-    <h1>My name is Stephanie Cain.<br>I am a product designer and I<br> develop user focused civic technology.</h1>
+    <h1>My name is Stephanie Cain. I am a product designer and I develop user focused civic technology.</h1>
     <div class="social-media">
       <ul>
         <li class="activeHex"><a href="https://www.linkedin.com/in/skcain" target="_blank" title="Stephanie Cain's LinkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
