--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Stephanie Cain">
 
   <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
+  <script src="assets/script/snap.svg-min.js"></script>
   <script src ="assets/script/main.js"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic,300,300italic,400,400italic,600,600italic,700,700italic,900,900italic" rel="stylesheet">
@@ -30,23 +31,23 @@
       <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
     </div>
   </div>
-  <header>
-    <svg class="svg-graphic" width="100%" height="254" viewBox="0 0 220 254" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" version="1.1" style="margin-top: 4rem;">
-      <clipPath id="hexagonal-mask">
-        <polygon points="0 63.5 110 0 220 63.5 220 190.5 110 254 0 190.5 0 63.5"></polygon>
-      </clipPath>
-      <defs>
-        <style>
-          .polygon { fill:#c9d3d6; }
-        </style>
-        <polygon id="polygon" points="0 63.5 110 0 220 63.5 220 190.5 110 254 0 190.5 0 63.5"></polygon>
-      </defs>
-      <title>Stephanie Cain's Profile Picture and hexagon pattern</title>
-      <g id="hex-group">
-        <image clip-path="url(#hexagonal-mask)" height="254" width="254" x="-20" y="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/stephanie-cain.jpg"></image>
-      </g>
+  <svg id="svg-bg" width="100%" height="330px" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" version="1.1">
+    <clipPath id="hexagonal-mask">
+      <polygon points="0 63.5 110 0 220 63.5 220 190.5 110 254 0 190.5 0 63.5"></polygon>
+    </clipPath>
+    <defs>
+      <style>
+        .polygon { fill:#fff; }
+      </style>
+      <polygon id="poly" points="0 63.5 110 0 220 63.5 220 190.5 110 254 0 190.5 0 63.5"></polygon>
+    </defs>
+    <title>Stephanie Cain's Profile Picture and hexagon pattern</title>
+    <svg x="50%" overflow="visible" id="hex-group">
+      <image clip-path="url(#hexagonal-mask)" height="254" width="254" x="-20" y="0" class="profile-image" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/stephanie-cain.jpg" transform="translate(-115, 70)"></image>
     </svg>
-    <h1>My name is Stephanie Cain.<br>I am a product designer and I<br> develop user-focused civic technology.</h1>
+  </svg>
+  <header>
+    <h1>My name is Stephanie Cain. I am a product designer and I develop user-focused civic technology.</h1>
     <div class="social-media">
       <ul>
         <li class="activeHex"><a href="https://www.linkedin.com/in/skcain" target="_blank" title="Stephanie Cain's LinkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
